--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <img src="https://uplink.weforum.org/uplink/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_jpg&versionId=0682o00000XqZEwAAN" alt="">
     </div>
 
-   <div id="box" class="box">
-        <img src="https://uplink.weforum.org/uplink/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_jpg&versionId=0682o00000XqZEwAAN" alt="">
+   <div id="box1" class="box1">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVsE03jhcY-J2pRB40hYT07le9oAlvZjDxfw&s" alt="">
     </div>
     <script src="script.js"></script>
 </body>
